--- a/Tipsy/Shop/Items/item_003.html
+++ b/Tipsy/Shop/Items/item_003.html
@@ -6,14 +6,14 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Let's get Tipsy! Tipsy.com is your new best friend with thousands of cocktail recipes for every occasion and palate.">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/normalize.css">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/styles.css">
+        <link rel="stylesheet" href="/Tipsy/normalize.css">
+        <link rel="stylesheet" href="/Tipsy/styles.css">
     </head>
     <body>
         <div id="wrapper">
             <header>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><h1>Tipsy</h1></a>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><img id="logo" src="/~ajprinz/GIT414/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
+                <a href="/Tipsy/index.html"><h1>Tipsy</h1></a>
+                <a href="/Tipsy/index.html"><img id="logo" src="/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
                 <nav>
                     <h2 class="accessibility">Navigation</h2>
                     <input type="checkbox" id="menu-toggle"/>
@@ -24,11 +24,11 @@
                         <span></span>
                     </div>
                     <ul>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
-                    </ul>                    
+                        <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                        <li><a href="/Tipsy/shop.html">Shop</a></li>
+                        <li><a href="/Tipsy/cart.html">Cart</a></li>
+                        <li><a href="/Tipsy/index.html">Home</a></li>
+                    </ul>
                 </nav>
                 <form>
                     <input type="search" name="search" id="search" placeholder="Search...">
@@ -38,17 +38,17 @@
                 <section>
                     <h2>Chemistry Set</h2>
                     <section>
-                        <img id="image" src="/~ajprinz/GIT414/Tipsy/Shop/Images/tipsyitem_glasses.png" alt="A set of three thick glasses of various types with the chemical depiction of alcohol.">                             
+                        <img id="image" src="/Tipsy/Shop/Images/tipsyitem_glasses.png" alt="A set of three thick glasses of various types with the chemical depiction of alcohol.">
                         <div id="black">
                             <h3>Chemistry Set</h3>
                             <h4>Description:</h4>
                             <p class="indent">These sturdy glasses will make you feel like the smarty pants you are as you point out the aromatics, the sugars and the alcohol that's both in your glass and on it. </p>
                             <h4>Price: <span class="indent">$45</span></h4>
-                            <form action="/~ajprinz/GIT414/Tipsy/cart.html">
+                            <form action="/Tipsy/cart.html">
                                 <label for="quantity">Qty:</label>
                                 <input type="textarea" name="quantity" id="quantity" value="1">
                                 <input type="submit" value="Add to Cart" id="addToCart">
-                                <script src="/~ajprinz/GIT414/Tipsy/scripts.js"></script>
+                                <script src="/Tipsy/scripts.js"></script>
                             </form>
                         </div>
                     </section>
@@ -60,10 +60,10 @@
                     <nav id="site-map">
                         <h2>Site Map</h2>
                         <ul>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
+                            <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                            <li><a href="/Tipsy/shop.html">Shop</a></li>
+                            <li><a href="/Tipsy/cart.html">Cart</a></li>
+                            <li><a href="/Tipsy/index.html">Home</a></li>
                         </ul>
                     </nav>
                     <div id="copyright">
