--- a/Tipsy/Alcohol/Shots/shots.html
+++ b/Tipsy/Alcohol/Shots/shots.html
@@ -6,15 +6,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Let's get Tipsy! Tipsy.com is your new best friend with thousands of cocktail recipes for every occasion and palate.">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/normalize.css">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/styles.css">
-        <script src="/~ajprinz/GIT414/Tipsy/scripts.js"></script>
+        <link rel="stylesheet" href="/Tipsy/normalize.css">
+        <link rel="stylesheet" href="/Tipsy/styles.css">
+        <script src="/Tipsy/scripts.js"></script>
     </head>
     <body>
         <div id="wrapper">
             <header>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><h1>Tipsy</h1></a>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><img id="logo" src="/~ajprinz/GIT414/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
+                <a href="/Tipsy/index.html"><h1>Tipsy</h1></a>
+                <a href="/Tipsy/index.html"><img id="logo" src="/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
                 <nav>
                     <h2 class="accessibility">Navigation</h2>
                     <input type="checkbox" id="menu-toggle"/>
@@ -25,11 +25,11 @@
                         <span></span>
                     </div>
                     <ul>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
-                    </ul>                    
+                        <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                        <li><a href="/Tipsy/shop.html">Shop</a></li>
+                        <li><a href="/Tipsy/cart.html">Cart</a></li>
+                        <li><a href="/Tipsy/index.html">Home</a></li>
+                    </ul>
                 </nav>
                 <form>
                     <input type="search" name="search" id="search" placeholder="Search...">
@@ -39,33 +39,33 @@
                 <section>
                     <h2>Shot Recipes</h2>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Shots/Drinks/birthdayCake.html">
+                        <a href="/Tipsy/Alcohol/Shots/Drinks/birthdayCake.html">
                             <h3>Birthday Cake</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Shots/Images/birthdaycake.jpg" alt="The Birthday Cake shot taste similiar to vanilla cake batter.">
+                            <img src="/Tipsy/Alcohol/Shots/Images/birthdaycake.jpg" alt="The Birthday Cake shot taste similiar to vanilla cake batter.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Shots/Drinks/greenTea.html">
+                        <a href="/Tipsy/Alcohol/Shots/Drinks/greenTea.html">
                             <h3>Green Tea</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Shots/Images/greentea.jpg" alt="The Green Tea shot with whiskey tastes exactly like green tea.">
+                            <img src="/Tipsy/Alcohol/Shots/Images/greentea.jpg" alt="The Green Tea shot with whiskey tastes exactly like green tea.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Shots/Drinks/peanutButterAndJelly.html">
+                        <a href="/Tipsy/Alcohol/Shots/Drinks/peanutButterAndJelly.html">
                             <h3>Peanut Butter &amp; Jelly</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Shots/Images/peanutbutterandjelly.jpg" alt="The Peanut Butter and Jelly shot is creamy shot with a grape and nutty aftertaste.">
+                            <img src="/Tipsy/Alcohol/Shots/Images/peanutbutterandjelly.jpg" alt="The Peanut Butter and Jelly shot is creamy shot with a grape and nutty aftertaste.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Shots/Drinks/payday.html">
+                        <a href="/Tipsy/Alcohol/Shots/Drinks/payday.html">
                             <h3>PayDay</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Shots/Images/payday.jpg" alt="The PayDay shot mimics the candy bar in tasting like peanuts and caramel.">
+                            <img src="/Tipsy/Alcohol/Shots/Images/payday.jpg" alt="The PayDay shot mimics the candy bar in tasting like peanuts and caramel.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Shots/Drinks/cottonCandy.html">
+                        <a href="/Tipsy/Alcohol/Shots/Drinks/cottonCandy.html">
                             <h3>Cotton Candy</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Shots/Images/cottoncandy.jpg" alt="The Cotton Candy shot with an interesting mix that includes cake Vodka tastes similiar to cotton candy.">
+                            <img src="/Tipsy/Alcohol/Shots/Images/cottoncandy.jpg" alt="The Cotton Candy shot with an interesting mix that includes cake Vodka tastes similiar to cotton candy.">
                         </a>
                     </section>
                 </section>
@@ -76,10 +76,10 @@
                     <nav id="site-map">
                         <h2>Site Map</h2>
                         <ul>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
+                            <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                            <li><a href="/Tipsy/shop.html">Shop</a></li>
+                            <li><a href="/Tipsy/cart.html">Cart</a></li>
+                            <li><a href="/Tipsy/index.html">Home</a></li>
                         </ul>
                     </nav>
                     <div id="copyright">
