--- a/Tipsy/Alcohol/Gin/gin.html
+++ b/Tipsy/Alcohol/Gin/gin.html
@@ -6,15 +6,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Let's get Tipsy! Tipsy.com is your new best friend with thousands of cocktail recipes for every occasion and palate.">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/normalize.css">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/styles.css">
-        <script src="/~ajprinz/GIT414/Tipsy/scripts.js"></script>
+        <link rel="stylesheet" href="/Tipsy/normalize.css">
+        <link rel="stylesheet" href="/Tipsy/styles.css">
+        <script src="/Tipsy/scripts.js"></script>
     </head>
     <body>
         <div id="wrapper">
             <header>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><h1>Tipsy</h1></a>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><img id="logo" src="/~ajprinz/GIT414/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
+                <a href="/Tipsy/index.html"><h1>Tipsy</h1></a>
+                <a href="/Tipsy/index.html"><img id="logo" src="/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
                 <nav>
                     <h2 class="accessibility">Navigation</h2>
                     <input type="checkbox" id="menu-toggle"/>
@@ -25,11 +25,11 @@
                         <span></span>
                     </div>
                     <ul>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
-                    </ul>                    
+                        <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                        <li><a href="/Tipsy/shop.html">Shop</a></li>
+                        <li><a href="/Tipsy/cart.html">Cart</a></li>
+                        <li><a href="/Tipsy/index.html">Home</a></li>
+                    </ul>
                 </nav>
                 <form>
                     <input type="search" name="search" id="search" placeholder="Search...">
@@ -39,33 +39,33 @@
                 <section>
                     <h2>Gin Drink Recipes</h2>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Gin/Drinks/ginAndTonic.html">
+                        <a href="/Tipsy/Alcohol/Gin/Drinks/ginAndTonic.html">
                             <h3>Gin &amp; Tonic</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Gin/Images/ginandtonic.jpg" alt="The Gin and Tonic is a classic cocktail with lime and tonic water.">
+                            <img src="/Tipsy/Alcohol/Gin/Images/ginandtonic.jpg" alt="The Gin and Tonic is a classic cocktail with lime and tonic water.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Gin/Drinks/gimlet.html">
+                        <a href="/Tipsy/Alcohol/Gin/Drinks/gimlet.html">
                             <h3>Gimlet</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Gin/Images/gimlet.jpg" alt="The Gimlet is a cocktail with the taste sugary limes.">
+                            <img src="/Tipsy/Alcohol/Gin/Images/gimlet.jpg" alt="The Gimlet is a cocktail with the taste sugary limes.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Gin/Drinks/martini.html">
+                        <a href="/Tipsy/Alcohol/Gin/Drinks/martini.html">
                             <h3>Martini</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Gin/Images/martini.jpg" alt="The Martini is a simple cocktail with gin and vermouth, for tangy olive taste.">
+                            <img src="/Tipsy/Alcohol/Gin/Images/martini.jpg" alt="The Martini is a simple cocktail with gin and vermouth, for tangy olive taste.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Gin/Drinks/ginRickey.html">
+                        <a href="/Tipsy/Alcohol/Gin/Drinks/ginRickey.html">
                             <h3>Gin Rickey</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Gin/Images/ginrickey.jpg" alt="The Gin Rickey is a citrus cocktail of Gin, lime juice, and club soda.">
+                            <img src="/Tipsy/Alcohol/Gin/Images/ginrickey.jpg" alt="The Gin Rickey is a citrus cocktail of Gin, lime juice, and club soda.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Gin/Drinks/negroni.html">
+                        <a href="/Tipsy/Alcohol/Gin/Drinks/negroni.html">
                             <h3>Negroni</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Gin/Images/negroni.jpg" alt="The Negroni is a bitter-sweet cocktail made with Campari and sweet vermouth.">
+                            <img src="/Tipsy/Alcohol/Gin/Images/negroni.jpg" alt="The Negroni is a bitter-sweet cocktail made with Campari and sweet vermouth.">
                         </a>
                     </section>
                 </section>
@@ -76,10 +76,10 @@
                     <nav id="site-map">
                         <h2>Site Map</h2>
                         <ul>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
+                            <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                            <li><a href="/Tipsy/shop.html">Shop</a></li>
+                            <li><a href="/Tipsy/cart.html">Cart</a></li>
+                            <li><a href="/Tipsy/index.html">Home</a></li>
                         </ul>
                     </nav>
                     <div id="copyright">
