--- a/Tipsy/Alcohol/Rum/rum.html
+++ b/Tipsy/Alcohol/Rum/rum.html
@@ -6,15 +6,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Let's get Tipsy! Tipsy.com is your new best friend with thousands of cocktail recipes for every occasion and palate.">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/normalize.css">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/styles.css">
-        <script src="/~ajprinz/GIT414/Tipsy/scripts.js"></script>
+        <link rel="stylesheet" href="/Tipsy/normalize.css">
+        <link rel="stylesheet" href="/Tipsy/styles.css">
+        <script src="/Tipsy/scripts.js"></script>
     </head>
     <body>
         <div id="wrapper">
             <header>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><h1>Tipsy</h1></a>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><img id="logo" src="/~ajprinz/GIT414/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
+                <a href="/Tipsy/index.html"><h1>Tipsy</h1></a>
+                <a href="/Tipsy/index.html"><img id="logo" src="/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
                 <nav>
                     <h2 class="accessibility">Navigation</h2>
                     <input type="checkbox" id="menu-toggle"/>
@@ -29,7 +29,7 @@
                         <li><a href="shop.html">Shop</a></li>
                         <li><a href="cart.html">Cart</a></li>
                         <li><a href="index.html">Home</a></li>
-                    </ul>                    
+                    </ul>
                 </nav>
                 <form>
                     <input type="search" name="search" id="search" placeholder="Search...">
@@ -39,33 +39,33 @@
                 <section>
                     <h2>Rum Drink Recipes</h2>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Rum/Drinks/mojito.html">
+                        <a href="/Tipsy/Alcohol/Rum/Drinks/mojito.html">
                             <h3>Mojito</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Rum/Images/mojito.jpg" alt="The Mojito is a classic cocktail with lime and mint.">
+                            <img src="/Tipsy/Alcohol/Rum/Images/mojito.jpg" alt="The Mojito is a classic cocktail with lime and mint.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Rum/Drinks/maitai.html">
+                        <a href="/Tipsy/Alcohol/Rum/Drinks/maitai.html">
                             <h3>Mai Tai</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Rum/Images/maitai.jpg" alt="The Mai Tai is a fruity cocktail with pinapple, orange juice, and cherry grenadine.">
+                            <img src="/Tipsy/Alcohol/Rum/Images/maitai.jpg" alt="The Mai Tai is a fruity cocktail with pinapple, orange juice, and cherry grenadine.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Rum/Drinks/pinaColada.html">
+                        <a href="/Tipsy/Alcohol/Rum/Drinks/pinaColada.html">
                             <h3>Pina Colada</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Rum/Images/pinacolada.jpg" alt="The Pina Colada is a tropical cocktail with coconut milk and pineapple.">
+                            <img src="/Tipsy/Alcohol/Rum/Images/pinacolada.jpg" alt="The Pina Colada is a tropical cocktail with coconut milk and pineapple.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Rum/Drinks/daiquiri.html">
+                        <a href="/Tipsy/Alcohol/Rum/Drinks/daiquiri.html">
                             <h3>Daiquiri</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Rum/Images/daiquiri.jpg" alt="The Daiquiri is a simple cocktail of Rum and sweet lime juice.">
+                            <img src="/Tipsy/Alcohol/Rum/Images/daiquiri.jpg" alt="The Daiquiri is a simple cocktail of Rum and sweet lime juice.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Rum/Drinks/painkiller.html">
+                        <a href="/Tipsy/Alcohol/Rum/Drinks/painkiller.html">
                             <h3>Painkiller</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Rum/Images/painkiller.jpg" alt="The Painkiller is a cocktail with pinapple, orange juice, and cream of coconut.">
+                            <img src="/Tipsy/Alcohol/Rum/Images/painkiller.jpg" alt="The Painkiller is a cocktail with pinapple, orange juice, and cream of coconut.">
                         </a>
                     </section>
                 </section>
@@ -76,10 +76,10 @@
                     <nav id="site-map">
                         <h2>Site Map</h2>
                         <ul>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
+                            <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                            <li><a href="/Tipsy/shop.html">Shop</a></li>
+                            <li><a href="/Tipsy/cart.html">Cart</a></li>
+                            <li><a href="/Tipsy/index.html">Home</a></li>
                         </ul>
                     </nav>
                     <div id="copyright">
