--- a/Tipsy/Alcohol/Tequila/Drinks/saltyChihuahua.html
+++ b/Tipsy/Alcohol/Tequila/Drinks/saltyChihuahua.html
@@ -6,15 +6,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Let's get Tipsy! Tipsy.com is your new best friend with thousands of cocktail recipes for every occasion and palate.">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/normalize.css">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/styles.css">
+        <link rel="stylesheet" href="/Tipsy/normalize.css">
+        <link rel="stylesheet" href="/Tipsy/styles.css">
         <script src="scripts.js"></script>
     </head>
     <body>
         <div id="wrapper">
             <header>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><h1>Tipsy</h1></a>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><img id="logo" src="/~ajprinz/GIT414/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
+                <a href="/Tipsy/index.html"><h1>Tipsy</h1></a>
+                <a href="/Tipsy/index.html"><img id="logo" src="/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
                 <nav>
                     <h2 class="accessibility">Navigation</h2>
                     <input type="checkbox" id="menu-toggle"/>
@@ -25,11 +25,11 @@
                         <span></span>
                     </div>
                     <ul>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
-                    </ul>                    
+                        <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                        <li><a href="/Tipsy/shop.html">Shop</a></li>
+                        <li><a href="/Tipsy/cart.html">Cart</a></li>
+                        <li><a href="/Tipsy/index.html">Home</a></li>
+                    </ul>
                 </nav>
                 <form>
                     <input type="search" name="search" id="search" placeholder="Search...">
@@ -66,7 +66,7 @@
                         </div>
                     </section>
                     <section>
-                        <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Tequila/Images/saltyChihuahua.png" alt="The Salty Chihuahua is a simple cocktail of tequila and lemonade.">
+                        <img src="/Tipsy/Alcohol/Tequila/Images/saltyChihuahua.png" alt="The Salty Chihuahua is a simple cocktail of tequila and lemonade.">
                     </section>
                 </section>
             </main>
@@ -76,10 +76,10 @@
                     <nav id="site-map">
                         <h2>Site Map</h2>
                         <ul>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
+                            <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                            <li><a href="/Tipsy/shop.html">Shop</a></li>
+                            <li><a href="/Tipsy/cart.html">Cart</a></li>
+                            <li><a href="/Tipsy/index.html">Home</a></li>
                         </ul>
                     </nav>
                     <div id="copyright">
