--- a/Tipsy/Alcohol/Tequila/tequilaResponsiveImages.html
+++ b/Tipsy/Alcohol/Tequila/tequilaResponsiveImages.html
@@ -6,16 +6,16 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Let's get Tipsy! Tipsy.com is your new best friend with thousands of cocktail recipes for every occasion and palate.">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/normalize.css">
-        <!--<link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/styles.css">-->
-        <script src="/~ajprinz/GIT414/Tipsy/scripts.js"></script>
-        <script src="/~ajprinz/GIT414/Tipsy/ResponsiveImages/picturefill.js"></script>
+        <link rel="stylesheet" href="/Tipsy/normalize.css">
+        <!--<link rel="stylesheet" href="/Tipsy/styles.css">-->
+        <script src="/Tipsy/scripts.js"></script>
+        <script src="/Tipsy/ResponsiveImages/picturefill.js"></script>
     </head>
     <body>
         <div id="wrapper">
             <header>
                 <a href="index.html"><h1>Tipsy</h1></a>
-                <a href="index.html"><img id="logo" src="/~ajprinz/GIT414/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
+                <a href="index.html"><img id="logo" src="/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
                 <nav>
                     <h2 class="accessibility">Navigation</h2>
                     <input type="checkbox" id="menu-toggle"/>
@@ -30,7 +30,7 @@
                         <li><a href="shop.html">Shop</a></li>
                         <li><a href="cart.html">Cart</a></li>
                         <li><a href="index.html">Home</a></li>
-                    </ul>                    
+                    </ul>
                 </nav>
                 <form>
                     <input type="search" name="search" id="search" placeholder="Search...">
@@ -42,36 +42,36 @@
                     <section>
                         <a href="margarita.html">
                             <h3>Margarita</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Tequila/Images/margarita.png" alt="The Margarita is a classic citrus cocktail with lime a and salted a rim.">
+                            <img src="/Tipsy/Alcohol/Tequila/Images/margarita.png" alt="The Margarita is a classic citrus cocktail with lime a and salted a rim.">
                         </a>
                     </section>
                     <section>
                         <a href="tequilaSunrise.html">
                             <h3>Tequila Sunrise</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Tequila/Images/tequilaSunrise.png" alt="The Tequila Sunrise is a cocktail with orange juice and cherry grenadine.">
+                            <img src="/Tipsy/Alcohol/Tequila/Images/tequilaSunrise.png" alt="The Tequila Sunrise is a cocktail with orange juice and cherry grenadine.">
                         </a>
                     </section>
                     <section>
                         <a href="juanCollins.html">
                             <h3>Juan Collins</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Tequila/Images/juanCollins.png" alt="The Juan Collins is a simple and delicious cocktail with lime juice and club soda.">
+                            <img src="/Tipsy/Alcohol/Tequila/Images/juanCollins.png" alt="The Juan Collins is a simple and delicious cocktail with lime juice and club soda.">
                         </a>
                     </section>
                     <section>
                         <a href="saltyChihuahua.html">
                             <h3>Salty Chihuahua</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Tequila/Images/saltyChihuahua.png" alt="The Salty Chihuahua is a simple cocktail of tequila and lemonade.">
+                            <img src="/Tipsy/Alcohol/Tequila/Images/saltyChihuahua.png" alt="The Salty Chihuahua is a simple cocktail of tequila and lemonade.">
                         </a>
                     </section>
                     <section>
                         <a href="polama.html">
                             <h3>Polama</h3>
                             <picture>
-                                <source srcset="/~ajprinz/GIT414/Tipsy/Alcohol/Tequila/Images/paloma1.png" media="(max-width: 320px)">
-                                <source srcset="/~ajprinz/GIT414/Tipsy/Alcohol/Tequila/Images/paloma2.png" media="(max-width: 640px)">
-                                <source srcset="/~ajprinz/GIT414/Tipsy/Alcohol/Tequila/Images/paloma3.png" media="(max-width: 1280px)">
-                                <source srcset="/~ajprinz/GIT414/Tipsy/Alcohol/Tequila/Images/paloma1.png">
-                                <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Tequila/Images/paloma1.png" alt="The Polama is a classic cocktail with pink grapefruit juice and club soda.">
+                                <source srcset="/Tipsy/Alcohol/Tequila/Images/paloma1.png" media="(max-width: 320px)">
+                                <source srcset="/Tipsy/Alcohol/Tequila/Images/paloma2.png" media="(max-width: 640px)">
+                                <source srcset="/Tipsy/Alcohol/Tequila/Images/paloma3.png" media="(max-width: 1280px)">
+                                <source srcset="/Tipsy/Alcohol/Tequila/Images/paloma1.png">
+                                <img src="/Tipsy/Alcohol/Tequila/Images/paloma1.png" alt="The Polama is a classic cocktail with pink grapefruit juice and club soda.">
                             </picture>
                         </a>
                     </section>
