--- a/Tipsy/Alcohol/Whiskey/whiskey.html
+++ b/Tipsy/Alcohol/Whiskey/whiskey.html
@@ -6,15 +6,15 @@
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="Let's get Tipsy! Tipsy.com is your new best friend with thousands of cocktail recipes for every occasion and palate.">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/normalize.css">
-        <link rel="stylesheet" href="/~ajprinz/GIT414/Tipsy/styles.css">
-        <script src="/~ajprinz/GIT414/Tipsy/scripts.js"></script>
+        <link rel="stylesheet" href="/Tipsy/normalize.css">
+        <link rel="stylesheet" href="/Tipsy/styles.css">
+        <script src="/Tipsy/scripts.js"></script>
     </head>
     <body>
         <div id="wrapper">
             <header>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><h1>Tipsy</h1></a>
-                <a href="/~ajprinz/GIT414/Tipsy/index.html"><img id="logo" src="/~ajprinz/GIT414/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
+                <a href="/Tipsy/index.html"><h1>Tipsy</h1></a>
+                <a href="/Tipsy/index.html"><img id="logo" src="/Tipsy/Images/tipsyLogo.svg" alt="Tipsy.com logo modeled after a cocktailed called the Cosmopolitan."></a>
                 <nav>
                     <h2 class="accessibility">Navigation</h2>
                     <input type="checkbox" id="menu-toggle"/>
@@ -25,11 +25,11 @@
                         <span></span>
                     </div>
                     <ul>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                        <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
-                    </ul>                    
+                        <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                        <li><a href="/Tipsy/shop.html">Shop</a></li>
+                        <li><a href="/Tipsy/cart.html">Cart</a></li>
+                        <li><a href="/Tipsy/index.html">Home</a></li>
+                    </ul>
                 </nav>
                 <form>
                     <input type="search" name="search" id="search" placeholder="Search...">
@@ -39,33 +39,33 @@
                 <section>
                     <h2>Whiskey Drink Recipes</h2>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Whiskey/Drinks/manhattan.html">
+                        <a href="/Tipsy/Alcohol/Whiskey/Drinks/manhattan.html">
                             <h3>Manhattan</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Whiskey/Images/manhattan.jpeg" alt="The Manhattan is a classic cocktail sweet vermouth and a cherry garnish.">
+                            <img src="/Tipsy/Alcohol/Whiskey/Images/manhattan.jpeg" alt="The Manhattan is a classic cocktail sweet vermouth and a cherry garnish.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Whiskey/Drinks/oldFashion.html">
+                        <a href="/Tipsy/Alcohol/Whiskey/Drinks/oldFashion.html">
                             <h3>Old Fashion</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Whiskey/Images/oldfashion.jpg" alt="The Old Fashion is a cocktail with bourbon and orange bitters.">
+                            <img src="/Tipsy/Alcohol/Whiskey/Images/oldfashion.jpg" alt="The Old Fashion is a cocktail with bourbon and orange bitters.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Whiskey/Drinks/whiskeySour.html">
+                        <a href="/Tipsy/Alcohol/Whiskey/Drinks/whiskeySour.html">
                             <h3>Whiskey Sour</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Whiskey/Images/whiskeysour.jpg" alt="The Whiskey Sour is a simple and delicious cocktail with lemon juice and sugar.">
+                            <img src="/Tipsy/Alcohol/Whiskey/Images/whiskeysour.jpg" alt="The Whiskey Sour is a simple and delicious cocktail with lemon juice and sugar.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Whiskey/Drinks/mintJulep.html">
+                        <a href="/Tipsy/Alcohol/Whiskey/Drinks/mintJulep.html">
                             <h3>Mint Julep</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Whiskey/Images/mintjulep.jpeg" alt="The Mint Julep is a simple cocktail for the Kentucky Derby. It is light in body and refreshingly minty.">
+                            <img src="/Tipsy/Alcohol/Whiskey/Images/mintjulep.jpeg" alt="The Mint Julep is a simple cocktail for the Kentucky Derby. It is light in body and refreshingly minty.">
                         </a>
                     </section>
                     <section>
-                        <a href="/~ajprinz/GIT414/Tipsy/Alcohol/Whiskey/Drinks/irishCoffee.html">
+                        <a href="/Tipsy/Alcohol/Whiskey/Drinks/irishCoffee.html">
                             <h3>Irish Coffee</h3>
-                            <img src="/~ajprinz/GIT414/Tipsy/Alcohol/Whiskey/Images/irishcoffee.jpg" alt="The Irish Coffee is a classic cocktail with some cream and a strong coffee.">
+                            <img src="/Tipsy/Alcohol/Whiskey/Images/irishcoffee.jpg" alt="The Irish Coffee is a classic cocktail with some cream and a strong coffee.">
                         </a>
                     </section>
                 </section>
@@ -76,10 +76,10 @@
                     <nav id="site-map">
                         <h2>Site Map</h2>
                         <ul>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/submitadrink.html">Submit a Drink</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/shop.html">Shop</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/cart.html">Cart</a></li>
-                            <li><a href="/~ajprinz/GIT414/Tipsy/index.html">Home</a></li>
+                            <li><a href="/Tipsy/submitadrink.html">Submit a Drink</a></li>
+                            <li><a href="/Tipsy/shop.html">Shop</a></li>
+                            <li><a href="/Tipsy/cart.html">Cart</a></li>
+                            <li><a href="/Tipsy/index.html">Home</a></li>
                         </ul>
                     </nav>
                     <div id="copyright">
