--- a/index.html
+++ b/index.html
@@ -43,6 +43,12 @@
                         <p>JavaScript &#183; Three.js</p>
                         <a class="cta" href="https://adamprinz.com/HyperlinkCube/" target="_blank">Check It Out</a>
                     </div>
+                    <div id="bookkeeping" class="project">
+                        <h2 class="accessibility">Captain Fatty's Brewery</h2>
+                        <img src="Assets/bookkeeping.svg" alt="Bookkeeping Logo">
+                        <p>jQuery</p>
+                        <a class="cta" href="https://adamprinz.com/Bookkeeping/" target="_blank">Check It Out</a>
+                    </div>
                     <div id="tipsy" class="project">
                         <h2 class="accessibility">Tipsy</h2>
                         <img src="Assets/tipsylogo.svg" alt="Tipsy Logo">
