--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                         <img id="avatar" src="Assets/avatar.png" alt="Adam Prinz Selfie">
                         <ul>
                             <li><a href="Assets/Adam Prinz Resume.pdf" target="_blank"><img src="Assets/resume.svg" alt="Download a PDF of Adam's Resume"></a></li>
-                            <li><a href="https://github.com/mysexysparkles" target="_blank"><img src="Assets/github.svg" alt="Connect with Adam Prinz on GitHub"></a></li>
+                            <li><a href="https://github.com/ajprinz" target="_blank"><img src="Assets/github.svg" alt="Connect with Adam Prinz on GitHub"></a></li>
                             <li><a href="https://codepen.io/mysexysparkles/" target="_blank"><img src="Assets/codepen.svg" alt="Connect with Adam Prinz on Codepen"></a></li>
                         </ul>
                     </div>
