--- a/index.html
+++ b/index.html
@@ -25,6 +25,12 @@
                             <li><a href="https://codepen.io/mysexysparkles/" target="_blank"><img src="Assets/codepen.svg" alt="Connect with Adam Prinz on Codepen"></a></li>
                         </ul>
                     </div>
+                    <div id="ctfnation" class="project">
+                        <h2 class="accessibility">CTFNation</h2>
+                        <img src="Assets/ctfnationlogo.svg" alt="CTFNation Logo">
+                        <p>Python &#183; Django</p>
+                        <a class="cta" href="" target="">Not Yet Live</a>
+                    </div>
                     <div id="captainfattys" class="project">
                         <h2 class="accessibility">Captain Fatty's Brewery</h2>
                         <img src="Assets/captainfattyslogo.svg" alt="Captain Fatty's Brewery Logo">
