--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <div id="ctfnation" class="project">
                         <h2 class="accessibility">CTFNation</h2>
                         <img src="Assets/ctfnationlogo.svg" alt="CTFNation Logo">
+                        <p class="label">CTFNation</p>
                         <p>Python &#183; Django</p>
                         <a class="cta" href="" target="">Not Yet Live</a>
                     </div>
